app/styles/app.scss
html, body {
  margin: 0 10px 100px 10px;
  font-family: 'Rock Salt', cursive;
  background: #ddd;
  height: 100%;

	@media (min-width: 1200px) {
	width: 1160px;
	margin: 0 auto;
	}

	@media (max-width: 1199px) {
	width: 870px;
	margin: 0 auto;
	}

	@media (max-width: 900px) {
	width: 580px;
	margin: 0 auto;
	}

	@media (max-width: 600px) {
	width: 300px;
	margin: 0 auto;
	}

}

body{
	width: inherit;
}

h2{
  font-family: 'Open Sans', sans-serif;
  color: #606060;
}

.input-box{
  margin: 10px;


@media (min-width: 1200px) {
	width: 1140px;
}

@media (max-width: 1199px) {
width: 850px;
}

@media (max-width: 900px) {
	width: 560px;
}

@media (max-width: 600px) {
	width: 250px;
}


}

.input-sticky{
  width: 250px;
  margin: 0 auto;
}

.save{
  padding: 2px 10px;
  float: right;
  margin: -24px -20px 10px 10px;
  color: #D10961;
}

.delete{
  padding: 2px 10px;
  float: right;
  margin: 5px 0 10px -40px;
  color: #D10961;
}

hr{
  margin: 20px 0 0 0;
  color: #606060;
  outline: none;
  border-style: dashed;
  display: block;
  clear: both;
	@media (max-width: 600px) {
	width: 270px;
	}
}

textarea{
  font-family: 'Rock Salt', cursive;
  width: 250px;
  height: 182px;
  background: #ffde4c;
  padding: 0 10px 10px 10px;
  resize: none;
  margin: 0 auto 0 auto;
  outline: none;
  font-size: 12pt;
  display: block;
  border-style: none;
  overflow: hidden;
}

input{
  font-family: 'Rock Salt', cursive;
  width: 250px;
  height: 38px;
  background: #ffde4c;
  padding: 5px 10px 0 10px;
  resize: disabled;
  margin: 0 auto 0 auto;
  outline: none;
  font-size: 12pt;
  display: block;
  border-style: none;
}

.sticky-box{
  margin: 10px;
  float: left;
}

.sticky{
  font-size: 12pt;
  width: 250px;
  height: 220px;
	  padding: 5px 10px 10px 10px;
  background: #ffde4c;
  box-shadow: 2px 2px 5px 0 #333;
  overflow: scroll;
}

.for-shadow{
  width: 270px;
  box-shadow: 2px 2px 5px 0 #333;
}

